// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarApp renders 1`] = `
<DocumentFragment>
  <div
    class="full-height"
  >
    <div
      class="full-height bg-white"
    >
      <div
        class="nav nav-tabs nav-fill"
        role="tablist"
      >
        <a
          aria-controls="panel-container-tabpane-home-panel"
          aria-selected="true"
          class="tabHeader nav-link active"
          data-rb-event-key="home-panel"
          href="#"
          id="panel-container-tab-home-panel"
          role="tab"
        >
          <span
            class="tabTitle"
          >
            Home
          </span>
        </a>
      </div>
      <div
        class="p-0 border-0 full-height tab-content"
      >
        <div
          aria-hidden="false"
          aria-labelledby="panel-container-tab-home-panel"
          class="fade h-100 paneOverrides tab-pane active show"
          id="panel-container-tabpane-home-panel"
          role="tabpanel"
        >
          <div>
            Hello home panel! 🖼
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SidebarApp renders not connected 1`] = `
<DocumentFragment>
  <div
    class="full-height"
  >
    <div
      class="container"
    >
      <div
        class="mt-4 row"
      >
        <div
          class="text-center col"
        >
          <h4
            class="display-6"
          >
            Connect PixieBrix Account
          </h4>
          <p>
            Register/log-in to PixieBrix to access your personal and team bricks
          </p>
          <a
            class="mt-4 btn btn-primary"
            href="https://app.pixiebrix.com"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-sign-in-alt fa-w-16 "
              data-icon="sign-in-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
                fill="currentColor"
              />
            </svg>
             Connect Account
          </a>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="text-center col"
        >
          <img
            alt="Marketplace"
            src="test-file-stub"
            width="300"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SidebarApp renders not connected partner view 1`] = `
<DocumentFragment>
  <div
    class="full-height"
  >
    <div
      class="container"
    >
      <div
        class="mt-4 row"
      >
        <div
          class="text-center col"
        >
          <h4
            class="display-6"
          >
            Connect your AARI account
          </h4>
          <p>
            Authenticate with Automation Anywhere to continue using your team's AARI extensions
          </p>
          <a
            class="mt-4 btn btn-primary"
            href="chrome-extension://abcxyz/options.html"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-sign-in-alt fa-w-16 "
              data-icon="sign-in-alt"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
                fill="currentColor"
              />
            </svg>
             Connect Account
          </a>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="text-center col"
        >
          <img
            alt="Marketplace"
            src="test-file-stub"
            width="300"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
